--- a/svelte_template/package.json
+++ b/svelte_template/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-wasm": "^3.0.0",
+    "@wasm-tool/rollup-plugin-rust": "^1.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -17,7 +17,6 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4",
-    "rust_wasm": "file:./../rust_wasm/pkg/"
+    "sirv-cli": "^0.4.4"
   }
 }
