--- a/rust_age_wasm/Cargo.toml
+++ b/rust_age_wasm/Cargo.toml
@@ -12,7 +12,8 @@ publish = false
 age = "^0.4"
 secrecy = "0.6.0"
 #https://github.com/rust-random/rand/issues/810
-rand = { version = "0.7.3", features = ["wasm-bindgen"] }
+getrandom = { version = "^0.1", features = ["wasm-bindgen"] }
+
 wasm-bindgen = "^0.2"
 
 console_error_panic_hook = { version = "^0.1"}
