--- a/svelte_webapp/package.json
+++ b/svelte_webapp/package.json
@@ -7,16 +7,19 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@wasm-tool/rollup-plugin-rust": "^1.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@wasm-tool/rollup-plugin-rust": "^1.0.1",
     "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-livereload": "^1.2.0",
+    "rollup-plugin-svelte": "^5.2.1",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "node-sass": "^4.13.1",
+    "rollup-plugin-postcss": "^2.6.4",
+    "sirv-cli": "^0.4.4",
+    "svelte-material-ui": "v1.0.0-beta.20"
   }
 }
