--- a/rust_age_wasm/Cargo.toml
+++ b/rust_age_wasm/Cargo.toml
@@ -9,15 +9,23 @@ publish = false
 
 [dependencies]
 # docs https://docs.rs/age/0.3.1/age/
+wasm-bindgen = "^0.2"
 age = "^0.4"
 secrecy = "0.6.0"
 #https://github.com/rust-random/rand/issues/810
 getrandom = { version = "^0.1", features = ["wasm-bindgen"] }
 
-wasm-bindgen = "^0.2"
 
 console_error_panic_hook = { version = "^0.1"}
 wee_alloc = { version = "^0.4"}
+
+scheme_lib = { version = "0.2.0", git = "https://github.com/benmkw/microscheme" }
+
+# signify = { version = "0.5.0", path = "../signify-rs" }
+# [dependencies.ed25519-dalek]
+# version = "^1.0.0-pre.3"
+# features = [ "nightly" ]
+
 
 [lib]
 crate-type = ["cdylib", "rlib"]
